# AutoGroup

./: LICENSE  README.md  main.py  pyproject.toml
autogroup/: file_utils.py  main.py  settings.py
config/: settings.py
groupgenerator/: file_utils.py  main.py  settings.py
groupgenerator/tests/: teams02.json  teams04.json  teams05.json  teams07.json
groupgenerator/utils/: json_utils.py
tests/: TESTS.md  teams01.json  teams03.json  teams06.json
utils/: group_generator.py  groupgenerator.py  json_utils.py
