[tool.poetry]
name = "groupgenerator"
version = "0.1.4"
description = "Cria grupos/equipes aleatórias baseadas em hard skills e soft skills."
authors = ["Daniel Lima"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
