[tool.poetry]
name = "groupgenerator"
version = "0.3.1"
description = "Cria grupos/equipes aleatórias baseadas em hard skills e soft skills."
authors = ["Daniel Lima"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.6"
mypy = "^1.11.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
